--- a/README.asciidoc.in
+++ b/README.asciidoc.in
@@ -1,8 +1,8 @@
 ////
 ////
 
-.zrv.zsh demo (link:https://www.youtube.com/watch?v=AfPgznZvBr8h[https://www.youtube.com/watch?v=AfPgznZvBr8h]):
-image:https://img.youtube.com/vi/AfPgznZvBr8/mqdefault.jpg["zrv.zsh", width=320, link="https://www.youtube.com/watch?v=AfPgznZvBr8"]
+.zrv.zsh demo (link:http://www.youtube.com/watch?v=AfPgznZvBr8h[http://www.youtube.com/watch?v=AfPgznZvBr8h]):
+image:https://img.youtube.com/vi/AfPgznZvBr8/mqdefault.jpg["zrv.zsh", width=320, link="http://www.youtube.com/watch?v=AfPgznZvBr8"]
 
 Usage
 -----
